# binlog-indexer-go

./: .gitignore  README.md  build_helper.sh  indexer.go  main.go  pyproject.toml  sql_metadata.go
mariadb_binlog_indexer/: indexer.py  utils.py
